--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,9 @@
 name: ci
 
-on: [pull_request]
+on: 
+  pull_request:
+  push:
+    branches: [master, main]
 
 concurrency: 
   group: ${{ github.workflow }}-${{ github.head_ref }}
