--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "getstream/stream-php",
+    "name": "getstream/getstream-php",
     "description": "PHP SDK for GetStream API",
     "version": "v0.0.3",
     "type": "library",
