--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Update Packagist
         env:
           PACKAGIST_TOKEN: ${{ secrets.PACKAGIST_TOKEN }}
-          PACKAGIST_USERNAME: ${{ secrets.PACKAGIST_USERNAME }}
+          PACKAGIST_USERNAME: ${{ vars.PACKAGIST_USERNAME }}
         run: |
           if [ -z "$PACKAGIST_TOKEN" ]; then
             echo "⚠️  PACKAGIST_TOKEN secret is not set. Skipping Packagist update."
